--- a/map.html
+++ b/map.html
@@ -20,6 +20,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyA7xY6JgrR-hAOLs1ZmZU9vCoFNb_YQ7qI"></script>
+
+    <script src="Perth.js"></script>
+
+    <script src="Perth_JSON.js"></script>
+
     <script type="text/javascript">
         var aLocations;
         var marker = [];
@@ -27,9 +32,9 @@
         var mapOptions = {
             zoom: 13,
             mapTypeId: google.maps.MapTypeId.ROADMAP,
-            center: new google.maps.LatLng(34.8549095,-82.3227979)
+            center: new google.maps.LatLng(-31.9505, 115.8605)
         };
-        var markerCluster = null;
+        var polyArray = [];
         function initialize() {
             map = new google.maps.Map(document.getElementById("map_canvas"),
                     mapOptions);
@@ -52,14 +57,50 @@
             });
 
             map.controls[google.maps.ControlPosition.LEFT_TOP].push(address_bar);
+            getGeoJSON();
+        }
+
+        function getGeoJSON() {
+            var poly = perth.features;
+            var style = perth_json.kml.Document.Style;
+            var placeMarks = perth_json.kml.Document.Folder.Placemark;
+            for(var i in poly) {
+                var coordinates = poly[i].geometry.coordinates[0];
+                var polyStyle = placeMarks[i].styleUrl.replace("#", "");
+                polyStyle += "-normal";
+                var lineColor = "";
+                var polyColor = "";
+                for(var i in style) {
+                    if(style[i]["-id"] == polyStyle) {
+                        lineColor = style[i].LineStyle.color;
+                        polyColor = style[i].PolyStyle.color;
+                    }
+                }
+                var poly_path = [];
+                for(var i in coordinates) {
+                    var crd = new google.maps.LatLng(coordinates[i][0], coordinates[i][1]);
+                    poly_path.push(crd);
+                }
+                if(i == 0) {
+                    polyArray[i] = new google.maps.Polygon({
+                        paths: poly_path,
+                        strokeColor: '#'+lineColor,
+                        strokeOpacity: 0.8,
+                        strokeWeight: 1,
+                        fillColor: '#'+polyColor,
+                        fillOpacity: 0.35
+                    });
+                    polyArray[i].setMap(map);
+                }
+            }
         }
 
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 </head>
 <body>
-<div class="input-group col-md-12" id="address_bar">
-    <input type="text" class="form-control col-md-6" style="margin-left: 20px" id="address" name="address" placeholder="Search Address" />
+<div class="input-group col-md-4" id="address_bar">
+    <input type="text" class="form-control" style="margin-left: 20px" id="address" name="address" placeholder="Search Address" />
 </div>
 <div id="map_canvas" style="position: absolute !important;width: 100%; height: 100%"></div>
 </body>
